fix(megamenu): remove overflow change

--- a/packages/styles/scss/components/masthead/_masthead-megamenu.scss
+++ b/packages/styles/scss/components/masthead/_masthead-megamenu.scss
@@ -16,7 +16,6 @@
     }
 
     100% {
-      overflow-y: auto;
       max-height: 100%;
     }
   }
